Joined all features together and tested. It works well, good job team!